2017-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (xplainedmini_updi): New programmer

2017-12-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* bootstrap: Detect whether libtoolize is named
	`glibtoolize' (MacOS)

2017-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date, due to UPDI addition

2017-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
	patch #9482: Add support for UPDI and AVR8X
	* avrdude.conf.in (xplainedpro_updi): New programmer
	* avrdude.conf.in (.avr8x, ATtiny1617, ATtiny817): New device
	family and devices
	* config_gram.y: add K_OCD_BASE and K_HAS_UPDI
	* lexer.l: (Ditto.)
	* doc/avrdude.texi: Document "has_updi" flag
	* jtag3.c: Implement UPDI
	* jtag3.h: (Ditto.)
	* jtag3_private.h: (Ditto.)
	* libavrdude.h: Add ocd_base value and AVRPART_HAS_UPDI flag
	* pgm_type.c: Add jtagice3_updi

2017-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
	* avrdude.conf.in (ATmega328PB): New part

2017-11-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #48084: Avoid compiled-in timestamp for reproducible release builds
	* main.c: Remove "compiled on/at" string

2017-03-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #47718: "lfuse reads as" not displayed in verbose mode - SOLUTION
	Reported by Roger A. Krupski:
	* safemode.c: Display lfuse at correct MSG level
