@@ -24,6 +24,7 @@ Current:
     - ehajo-isp (commercial version of USBtiny)
     - XplainedPro in UPDI mode
     - XplainedMini in UPDI mode
+    - Atmel Powerdebugger in all modes (JTAG, PDI, UPDI, debugWIRE, ISP)
 
   * Bugfixes:
     bug #47550: Linux GPIO broken
